force-app/main/default/objects/Project_Assignment__c/Project_Assignment__c.object-meta.xml
<CustomObject>
    <description
  >Lists the projects that have to be completed in order to complete a Project. (Detail record of a Project.)</description>
    <label>Project Assignment</label>
    <nameField>
        <label>Assignment Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>