force-app/main/default/objects/Project_Assignment__c/fields/Assignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Notes__c</fullName>
    <description
  >Description of assignment and additional details if needed</description>
    <inlineHelpText
  >Description of assignment and additional details if needed</inlineHelpText>
    <label>Assignment Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>