force-app/main/default/objects/Project_Assignment__c/fields/Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining__c</fullName>
    <description>Hours assigned minus the hours completed.</description>
    <formula>Hours_Assigned__c -  Hours_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours assigned minus the hours completed.</inlineHelpText>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>