force-app/main/default/objects/Project_Assignment__c/fields/Is_Project_Resource_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Resource_Current_User__c</fullName>
    <description
  >Shows a 1 if the Project Resource is the currently logged in user.  (For use on list views.)</description>
    <formula>IF($User.Id =Project_Resource__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows a 1 if the Project Resource is the currently logged in user.  (For use on list views.)</inlineHelpText>
    <label>Is Project Resource Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>