force-app/main/default/objects/Project_Assignment__c/fields/Items_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Items_Assigned__c</fullName>
    <description
  >Number of Items to be completed in this assignment. Items may be interviews, contacts added, etc.</description>
    <inlineHelpText
  >Number of Items to be completed in this assignment. Items may be interviews, contacts added, etc.</inlineHelpText>
    <label>Items Assigned</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>