force-app/main/default/objects/Project_Assignment__c/fields/Items_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Items_Remaining__c</fullName>
    <description>Items assigned minus items remaining.</description>
    <formula>Items_Assigned__c -  Items_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Items assigned minus items remaining.</inlineHelpText>
    <label>Items Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>