force-app/main/default/objects/Project_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description
  >Indicates the Project that this assignment is for.</description>
    <inlineHelpText
  >Indicates the Project that this assignment is for.</inlineHelpText>
    <label>Project</label>
    <referenceTo>SFL5_Projects__c</referenceTo>
    <relationshipLabel>Project Assignments</relationshipLabel>
    <relationshipName>Project_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>