force-app/main/default/objects/Project_Assignment__c/fields/Project_Resource_2__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Resource (2)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>