force-app/main/default/objects/Project_Assignment__c/fields/Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Staff member who has been given this Project Assignment.</description>
    <inlineHelpText
  >Staff member who has been given this Project Assignment.</inlineHelpText>
    <label>Project Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>