force-app/main/default/objects/Project_Assignment__c/fields/Research_Group__c.field-meta.xml
<CustomField>
    <fullName>Research_Group__c</fullName>
    <formula>TEXT(Project__r.Research_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Group</label>
    <type>Text</type>
</CustomField>