force-app/main/default/objects/Project_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Project_Resource__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Adjusted_Completion_Date__c</columns>
    <columns>Hours_Assigned__c</columns>
    <columns>Hours_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Adjusted_Completion_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <filters>
        <field>Hours_Remaining__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>All Project Assignments</label>
</ListView>