force-app/main/default/objects/Project_Assignment__c/listViews/Closed_Project_Assignments.listView-meta.xml
<ListView>
    <fullName>Closed_Project_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Adjusted_Completion_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Project_Resource__c</columns>
    <columns>Hours_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hours_Remaining__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Closed Project Assignments</label>
</ListView>