force-app/main/default/objects/Project_Assignment__c/listViews/My_Closed_Project_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Closed_Project_Assignments</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Adjusted_Completion_Date__c</columns>
    <columns>Hours_Assigned__c</columns>
    <columns>Hours_Completed__c</columns>
    <columns>Hours_Remaining__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Project_Resource_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Project_Resource_2_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Hours_Remaining__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Closed Project Assignments</label>
</ListView>